force-app/main/default/objects/DOCEBO2_CO__c/DOCEBO2_CO__c.object-meta.xml
<CustomObject>
    <description>LMS Course Enrollment</description>
    <label>LMS Course Enrollment</label>
    <nameField>
        <label>Enroll ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>