force-app/main/default/objects/DOCEBO2_CO__c/fields/C_DC_COURSE_ID__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_ID__c</fullName>
    <label>Course ID</label>
    <referenceTo>DOCEBO1_CO__c</referenceTo>
    <relationshipName>Enrollment_Course</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>