force-app/main/default/objects/DOCEBO2_CO__c/fields/C_DC_COURSE_NAME__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_NAME__c</fullName>
    <formula>C_DC_COURSE_ID__r.C_DC_COURSE_NAME__c</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>