force-app/main/default/objects/DOCEBO2_CO__c/fields/C_DC_COURSE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_STATUS__c</fullName>
    <label>Status</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>