force-app/main/default/objects/DOCEBO2_CO__c/fields/C_SF_PRODUCT_ID__c.field-meta.xml
<CustomField>
    <fullName>C_SF_PRODUCT_ID__c</fullName>
    <label>Product ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>