force-app/main/default/objects/DOCEBO2_CO__c/fields/C_SF_SO_ID__c.field-meta.xml
<CustomField>
    <fullName>C_SF_SO_ID__c</fullName>
    <label>SO ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>