force-app/main/default/objects/DOCEBO2_CO__c/fields/C_SF_USER_ID__c.field-meta.xml
<CustomField>
    <fullName>C_SF_USER_ID__c</fullName>
    <label>User ID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>