force-app/main/default/objects/DOCEBO2_CO__c/fields/D_DC_COURSE_COMP__c.field-meta.xml
<CustomField>
    <fullName>D_DC_COURSE_COMP__c</fullName>
    <label>Completed datetime</label>
    <type>DateTime</type>
</CustomField>