force-app/main/default/objects/DOCEBO2_CO__c/fields/D_DC_COURSE_LA__c.field-meta.xml
<CustomField>
    <fullName>D_DC_COURSE_LA__c</fullName>
    <label>Last Access</label>
    <type>DateTime</type>
</CustomField>