force-app/main/default/objects/DOCEBO2_CO__c/fields/D_DC_ENROLL__c.field-meta.xml
<CustomField>
    <fullName>D_DC_ENROLL__c</fullName>
    <label>Enroll Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>