force-app/main/default/objects/DOCEBO2_CO__c/fields/D_DC_UNENROLL__c.field-meta.xml
<CustomField>
    <fullName>D_DC_UNENROLL__c</fullName>
    <label>Unenrolled datetime</label>
    <type>DateTime</type>
</CustomField>