force-app/main/default/objects/DOCEBO2_CO__c/fields/N_DC_COMPLETION_PCT__c.field-meta.xml
<CustomField>
    <fullName>N_DC_COMPLETION_PCT__c</fullName>
    <label>Completion Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>