force-app/main/default/objects/DOCEBO2_CO__c/fields/N_DC_MAX_COURSE_SCORE__c.field-meta.xml
<CustomField>
    <fullName>N_DC_MAX_COURSE_SCORE__c</fullName>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>