force-app/main/default/objects/DOCEBO2_CO__c/fields/N_DC_TIME_IN_COURSE__c.field-meta.xml
<CustomField>
    <fullName>N_DC_TIME_IN_COURSE__c</fullName>
    <label>Time in course</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>