force-app/main/default/objects/DOCEBO2_CO__c/fields/PATH_COMPLETION__c.field-meta.xml
<CustomField>
    <fullName>PATH_COMPLETION__c</fullName>
    <label>Path completion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>